# AutoGrad

./: .gitignore  CMakeLists.txt  README.md  Tensor.cpp  Tensor.h  optim.h  tests.cpp  train.cpp  train_mlp.cpp  train_mnist.cpp
docs/: index.html  results.json
docs/docs/: getting-started.html  nn.html  sequential.html  tensor.html
examples/: CMakeLists.txt  train.cpp  train_mlp.cpp  train_mnist.cpp
include/micrograd/: CMakeLists.txt  Tensor.h  nn.h
include/vecore/: CMakeLists.txt  Tensor.h  nn.h  optim.h  sequential.h
src/: CMakeLists.txt  Tensor.cpp
tests/: CMakeLists.txt  tests.cpp
